--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dist/"
   ],
   "scripts": {
-    "build": "tsc",
+    "build:clean": "rm -rf dist",
+    "build:compress": "tsc",
+    "build": "npm run build:clean && npm run build:compress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build"
   },
