--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
+    "@kess-flow/ioredis-mock": "^5.2.7",
     "@types/ioredis": "^4.22.0",
     "events": "^3.2.0",
     "ioredis": "^4.23.0",
-    "ioredis-mock": "^5.2.4",
-    "microseconds": "^0.2.0",
     "typescript": "^4.2.2",
     "uuid": "^8.3.2"
   }
